--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         </div>
 
     </main>
+    <br>
     <footer>
         by Enzo &copy;&trade;
+        <br>Agradecimento especial para José "Maçaneiro" Carlos "Filho" Izabeli "Souza" e SENAI
     </footer>
 </body>
 </html>
